Fix asides in long-form content on mobile.

--- a/src/patterns/long-form/_long-form-asides.scss
+++ b/src/patterns/long-form/_long-form-asides.scss
@@ -2,6 +2,9 @@
 // Asides
 // ====================
 
+aside {
+    display: block; 
+}
 
 // Align centre
 .long-form__content aside.align-centre,
@@ -19,56 +22,64 @@
     text-align: right;   
 }
 
-// Extend left
-.long-form__content aside.extend-left {
-    float: left;
-    padding: 15px 0 10px;
-    padding-right: 30px;
-    margin-bottom: 0;
-    margin-left: -25%;
+@media (min-width: 992px) {
+
+    // Extend left
+    .long-form__content aside.extend-left {
+        float: left;
+        padding: 15px 0 10px;
+        padding-right: 30px;
+        margin-bottom: 0;
+        margin-left: -25%;
+    }
+
+    // Extend right
+    .long-form__content aside.extend-right {
+        float: right;
+        padding: 15px 0;
+        padding-left: 30px;
+        margin-bottom: 0;
+        margin-right: -25%;
+    }
+
+    // Float left
+    .long-form__content aside.float-left {
+        float: left;
+        padding: 15px 0 10px;
+        padding-right: 30px;
+        margin-bottom: 0;
+    }
+
+    // Float right
+    .long-form__content aside.float-right {
+        float: right;
+        padding: 15px 0;
+        padding-left: 30px;
+        margin-bottom: 0;
+    }
 }
 
-// Extend right
-.long-form__content aside.extend-right {
-    float: right;
-    padding: 15px 0;
-    padding-left: 30px;
-    margin-bottom: 0;
-    margin-right: -25%;
-}
 
-// Float left
-.long-form__content aside.float-left {
-    float: left;
-    padding: 15px 0 10px;
-    padding-right: 30px;
-    margin-bottom: 0;
-}
 
-// Float right
-.long-form__content aside.float-right {
-    float: right;
-    padding: 15px 0;
-    padding-left: 30px;
-    margin-bottom: 0;
-}
+
 
 // Parallel left
 // Parallel right
 .long-form__content aside.parallel-left,
 .long-form__content aside.parallel-right {
-    padding: 10px 20px 10px;
-    width: 150px;  
+    padding: 10px 0 10px;
+    max-width: 230px; 
 }
 
 @media (min-width: 992px) {
     .long-form__content aside.parallel-left {
-
+        width: 150px; 
         padding: 10px 0 0;
         position: absolute;
         left: -170px;
     }
-    .long-form__content aside.parallel-right {
+    .long-form__content aside.parallel-right { 
+        width: 150px; 
         padding: 10px 0 0;
         position: absolute;
         right: -170px;
