--- a/src/patterns/long-form/_long-form.scss
+++ b/src/patterns/long-form/_long-form.scss
@@ -16,6 +16,7 @@
     font-family: $font-family-serif;
     font-size: 22px;
     line-height: 1.5;
+    word-wrap: break-word;
 
     // Positioning
     z-index: 1000;
